<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:my="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">




    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />


    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="400"
        my:showAsAction="never" />


    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save"
        android:orderInCategory="300"
        my:showAsAction="always" />



    <item android:id="@+id/action_forward"
          android:icon="@drawable/ic_action_forward"
          android:title="@string/action_forward"
          android:orderInCategory="100"
          my:showAsAction="always"
        />


    <item android:id="@+id/action_copy"
        android:icon="@drawable/ic_action_copy"
        android:title="@string/action_modi"
        android:orderInCategory="200"
        my:showAsAction="always"
        />


   <item android:id="@+id/action_up"
         android:icon="@drawable/ic_action_back"
         android:title="@string/action_up"
         android:orderInCategory="500"
         my:showAsAction="always"
       />



</menu>
